--- a/index.html
+++ b/index.html
@@ -45,44 +45,44 @@
     <main>
                                                 <!--section banner-->
         <section class="banner">
-            <h1 class="title-pal">SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
-            <div class="buttons banner-button">
+            <h1 class="banner__title">SOLUCIONES EFICACES PARA SU NEGOCIO</h1>
+            <div class="buttons banner__button">
                 <button id="data-modal-open" type="button"  class="buttom">solicite nuestro servicio</button>
             </div>
-            <div class="banner-overlay"></div>
-            <div class="backdrop is-hidden" id="data-modal">
+            <div class="banner__overlay"></div>
+            <div class="backdrop is__hidden" id="data-modal">
                 <div class="modal">
-                    <button class="btn-modal" id="data-modal-close">
+                    <button class="modal__btn" id="data-modal-close">
                         <svg class="icon-x">
                             <use href="#icon-x"></use>
                         </svg>
                     </button>
-                    <p >Deje sus datos, nos contactaremos con usted</p>
-                    <form class="modal-form" action="">
-                        <label class="label-name">
+                    <p class="modal__title" >Deje sus datos, nos contactaremos con usted</p>
+                    <form class="modal__form" action="">
+                        <label class="modal__form__name">
                             Nombre
-                            <input class="input-modal" type="text" name="name" />
-                            <svg class="svg-name">
+                            <input class="input__modal" type="text" name="name" />
+                            <svg class="svg__name">
                                 <use href="#icon-name"></use>
                             </svg>
                         </label>
-                        <label class="label-name">
+                        <label class="modal__form__name">
                             Teléfono
-                            <input class="input-modal" type="tel" name="Teléfono" />
-                            <svg class="svg-name">
+                            <input class="input__modal" type="tel" name="Teléfono" />
+                            <svg class="svg__name">
                                 <use href="#icon-fhone"></use>
                             </svg>
                         </label>
-                        <label class="label-name">
+                        <label class="modal__form__name">
                             E-mail
-                            <input class="input-modal" type="email" name="email" />
-                            <svg class="svg-name">
+                            <input class="input__modal" type="email" name="email" />
+                            <svg class="svg__name">
                                 <use href="#icon-mail"></use>
                             </svg>
                         </label>
-                        <label class="label-name">
+                        <label class="modal__form__name">
                             Comentarios
-                            <textarea class="input-tex" type="textarea" name="textarea" cols="30" rows="10" placeholder="Introduzca el texto"></textarea>
+                            <textarea class="input__tex" type="textarea" name="textarea" cols="30" rows="10" placeholder="Introduzca el texto"></textarea>
                         </label>
                         <div class="container-group-check">
                             <label class="label-name-check">
