--- a/index.html
+++ b/index.html
@@ -82,63 +82,63 @@
                         </label>
                         <label class="modal__form__name">
                             Comentarios
-                            <textarea class="input__tex" type="textarea" name="textarea" cols="30" rows="10" placeholder="Introduzca el texto"></textarea>
+                            <textarea class="input__tex" type="textarea" name="textarea" cols="58" rows="10" placeholder="Introduzca el texto"></textarea>
                         </label>
-                        <div class="container-group-check">
-                            <label class="label-name-check">
-                                <input type="checkbox" name="accept-terms" hidden  required />
-                                <span class="custom-check">
-                                    <svg class="svg-name-check">
+                        <div class="modal__form__check">
+                            <label class="modal__form__check__label">
+                                <input class="input__check" type="checkbox" name="accept-terms" required />
+                                <span class="custom__check">
+                                    <svg class="custom__check__svg">
                                         <use href="#icon-check"></use>
                                     </svg>
                                 </span>
-                                <span class="custom-text"> Estoy de acuerdo con el boletín informativo y acepto los Términos y Condiciones</span>
+                                <span class="modal__form__check__text"> Estoy de acuerdo con el boletín informativo y acepto los Términos y Condiciones</span>
                             </label>
                         </div>
-                        <button class="button-send" type="submit"><span>Enviar</span></button>
+                        <button class="modal__form__send" type="submit"><span class="letter__send">Enviar</span></button>
                     </form>
                 </div>
             </div>
             
         </section>
-                                                <!--section 2-->
-        <section class="section quality">   
-            <ul class="box1-quality">
-                <li class="box-quality">
-                    <div>
-                        <svg class="icon-first">
+                                                <!--section quality-->
+        <section class="quality">   
+            <ul class="quality__box1">
+                <li class="quality__box1__box">
+                    <div class="quality__box1__box__svg">
+                        <svg class="icon__first">
                             <use href="#antenna"></use>
                         </svg>
                     </div>
-                    <h5 class="title-1p" >ATENCION A LOS DETALLES</h5>
-                    <P class="paragraph-1">Nos adentramos en todos los detalles y procesos de su negocio, para asi desarrolar la solucion a su medida.</P>
+                    <h5 class="quality__box1__title1" >ATENCION A LOS DETALLES</h5>
+                    <P class="quality__box1__paragraph1">Nos adentramos en todos los detalles y procesos de su negocio, para asi desarrolar la solucion a su medida.</P>
                 </li>
                 <li class="special-box box-quality">
                     <div>
-                        <svg class="icon-first">
+                        <svg class="icon__first">
                             <use href="#clock"></use>
                         </svg>
                     </div>
-                    <h5 class="title-2p">PUNTUALIDAD</h5>
-                    <P class="paragraph-2" >Con nosotros, usted puede sentirse seguro y protegido. Un principio importante de la empresa: respetar su tiempo y respetar los plazos acordados.</P>
+                    <h5 class="quality__box1__title1">PUNTUALIDAD</h5>
+                    <P class="quality__box1__paragraph1" >Con nosotros, usted puede sentirse seguro y protegido. Un principio importante de la empresa: respetar su tiempo y respetar los plazos acordados.</P>
                 </li>
                 <li class="box-quality">
                     <div>
-                        <svg class="icon-first">
+                        <svg class="icon__first">
                             <use href="#graph"></use>
                         </svg>
                     </div>
-                    <h5 class="title-3p">PLANIFICACIÓN</h5>
-                    <p class="paragraph-3">Usted podrá observar y participar en cada fase del desarrollo y aplicación de soluciones.</p>
+                    <h5 class="quality__box1__title1">PLANIFICACIÓN</h5>
+                    <p class="quality__box1__paragraph1">Usted podrá observar y participar en cada fase del desarrollo y aplicación de soluciones.</p>
                 </li>
                 <li class="box-quality">
                     <div>
-                        <svg class="icon-first">
+                        <svg class="icon__first">
                             <use href="#astronaut"></use>
                         </svg>
                     </div>
-                    <h5 class="title-4p">TEGNOLOGÍA MODERNA</h5>
-                    <p class="paragraph-4">Usamos herramientas innovadoras para resolver las tareas asignadas. Es hora de simplificar los procesos laborales.</p>
+                    <h5 class="quality__box1__title1">TEGNOLOGÍA MODERNA</h5>
+                    <p class="quality__box1__paragraph1">Usamos herramientas innovadoras para resolver las tareas asignadas. Es hora de simplificar los procesos laborales.</p>
                 </li>
             </ul>  
         </section>
